<resources>
    <string name="app_name">Map Task</string>
    <string name="title_activity_maps">Map</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="track_details">Track details</string>
    <string name="floating_phone">floating phone</string>
    <string name="display_picture">display picture</string>
    <string name="mekvahan">Mekvahan</string>
    <string name="order_id">Order ID.</string>
    <string name="dummy_orderid">152290722651</string>
    <string name="service_centre">Service centre</string>
    <string name="dummy_servicecentre">214 Overlook Circle, Suite 220, Delhi</string>
    <string name="require_pickup">Require Pickup</string>
    <string name="_02_10_am">02:10 am</string>
    <string name="_12_07_18">12–07–18</string>
    <string name="your_order_has_been_received">Your order has been received</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="we_are_on_the_way_to_pickup_your_vehicle">We are on the way to pickup your vehicle</string>
    <string name="vehicle_picked_up">Vehicle picked up</string>
    <string name="vehicle_servicing_in_progress">Vehicle servicing in progress</string>
    <string name="servicing_of_your_vehicle_is_complete">Servicing of your vehicle is complete</string>
    <string name="vehicle_dropped">Vehicle dropped</string>
    <string name="refer_this_to_your_friends_and_earn_rewards">Refer this to your friends \n and earn rewards</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="need_time_to_get_ready">Need time to get ready</string>
    <string name="want_to_change_drop_location">Want to change drop location</string>
    <string name="expected_a_shorter_wait_time">Expected a shorter wait time</string>
    <string name="driver_denied_duty">Driver denied duty</string>
    <string name="need_to_apply_coupon">Need to apply coupon</string>
    <string name="my_reason_is_not_listed">My reason is not listed</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_cancel">Don\'t Cancel</string>
    <string name="cancel_activity_name">Cancel Task</string>
    <string name="radio_tooltiptext">Choose your reason for cancellation</string>
    <string name="cancel_activity_title">Reason for Cancellation</string>
    <string name="colourless">colourless</string>
    <string name="coloured">coloured</string>
</resources>
