<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CancelActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="top"
        android:gravity="center"
        android:layout_height="240dp">
        <ImageView
            android:contentDescription="@string/cancel"
            android:layout_width="72dp"
            android:layout_height="64dp"
            android:background="@drawable/asset38xxxhdpi"/>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/cancel_reason"
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:textAlignment="textStart"
        android:tooltipText="@string/radio_tooltiptext"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/grey_white"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:text="@string/need_time_to_get_ready"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/grey_white"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:text="@string/want_to_change_drop_location"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/grey_white"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:text="@string/expected_a_shorter_wait_time"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/grey_white"
            android:text="@string/driver_denied_duty"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/grey_white"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:text="@string/need_to_apply_coupon"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textColor="@color/grey_white"
            style="@style/Widget.AppCompat.CompoundButton.RadioButton"
            android:text="@string/my_reason_is_not_listed"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|fill_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_alignParentBottom="true"
            android:paddingBottom="16dp"
            android:paddingHorizontal="16dp"
            style="?android:attr/buttonBarStyle"
            android:layout_gravity="bottom">
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:layout_marginVertical="4dp"
                android:elevation="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/red_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content" />
            <Button
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/don_t_cancel"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:elevation="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginVertical="4dp"
                android:background="@color/dark_grey_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>